资源管理及BUG修复

--- a/src/main/webapp/mportals/adminext/resource/edit.html
+++ b/src/main/webapp/mportals/adminext/resource/edit.html
@@ -41,14 +41,18 @@
 <form id="inputForm" action="/Quark/resource/ext/saveit" method="post" class="form-horizontal">
 			<div class="box-body">
 				<div class="form-unit">基本信息</div>
-<input type="hidden" id="oid" name="oid" value=""/>
+				<input type="hidden" id="oid" name="oid" value=""/>
 				<div class="row">
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label col-sm-4" title="">
 								上级资源：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="parentId" name="parentId" value="" maxlength="200" class="form-control"/>
+								<div class="input-group">
+									<input id="parent" name="parent" type="text" value="" class="form-control ">
+									<span class="input-group-btn"><a id="parentButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
+								</div>
+
 							</div>
 						</div>
 					</div>
@@ -57,16 +61,14 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required">*</span> 资源类型：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<!-- <input type="text" id="resType" name="resType" value="" maxlength="200" class="form-control required" required/> -->
-
-<label for="resType1">菜单</label>
-<input type="radio" name="resType" id="resType1" value="1" checked>
-<label for="resType2">按钮</label>
-<input type="radio" name="resType" id="resType2" value="2">
-
-
-
-
+								<div class="radio" style="padding-top: 2px;">
+								  <label>
+								    <input type="radio" name="resType" id="resType1" value="1" checked>菜单
+								  </label>
+								  <label>
+								    <input type="radio" name="resType" id="resType2" value="2"> 按钮
+								  </label>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -107,17 +109,11 @@
 							<label class="control-label col-sm-4" title="">
 								资源图标：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="resIcon" name="resIcon" value="" maxlength="200" class="form-control"/>
-
-
-<div class="input-group">
-	<span class="input-group-addon"><i id="menuIconIcon" class="icon-map"></i></span>
-	<input id="resIcon" name="resIcon" type="text" value="icon-map" class="form-control ">
-	<span class="input-group-btn"><a id="menuIconButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
-</div>
-
-
-
+								<div class="input-group">
+									<span class="input-group-addon"><i id="menuIconIcon" class="icon-map"></i></span>
+									<input id="resIcon" name="resIcon" type="text" value="icon-map" class="form-control ">
+									<span class="input-group-btn"><a id="menuIconButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -191,13 +187,44 @@ $(function(){
 			var d = data.data;
 			$("#inputForm input,#inputForm textarea").each(function(obj){
 				var name = $(this).attr("id");
+				if($(this).attr("type") == 'radio'){
+					name = $(this).attr("name");
+					//console.log("type:"+$(this).attr("type"));
+					var v = $(this).val();
+					//console.log("==>"+name+"==>"+d[name]+"type v:"+v);
+					if(d[name] == v){
+						$(this).attr("checked","checked");
+					}
+					return ;
+				}
+				
 				$(this).val(d[name]);
 			})
 			
 		}
 	}, "json");
+	//选择上级资源
+	$("#parentButton").on("click",function(){
+		showlayer('上级资源','http://layer.layui.com/test/welcome.html');
+	});
+	//选择图标
+	$("#menuIconButton").on("click",function(){
+		showlayer('选择图标','http://layer.layui.com/test/welcome.html');
+	});
 	
-})
+});
+function showlayer(_title,_url){
+	layer.open({
+	    type: 2,
+	    title: _title,
+	    maxmin: true,
+	    area: ['800px', '500px'],
+	    content: _url,
+	    end: function(){
+	      //layer.tips('Hi', '#about', {tips: 1})
+	    }
+	  });
+}
 $("#inputForm").validate({
 	submitHandler: function(form){
 		js.ajaxSubmitForm($(form), function(data){
