统一菜单树

--- a/src/main/webapp/mportals/adminext/resource/edit.html
+++ b/src/main/webapp/mportals/adminext/resource/edit.html
@@ -199,7 +199,7 @@ $(function(){
 	}, "json");
 	//选择上级资源
 	$("#parentButton").on("click",function(){
-		showlayer('上级资源','/Quark/dataTree/treeselect?url=xxxx&checkbox=true');
+		showlayer('上级资源','/Quark/dataTree/treeselect?url=/Quark/resource/ext/tree&check=false');
 	});
 	//选择图标
 	$("#menuIconButton").on("click",function(){
@@ -216,6 +216,7 @@ function showlayer(_title,_url){
 	    content: _url,
 	    end: function(){
 	      //layer.tips('Hi', '#about', {tips: 1})
+	      
 	    },
 	    btn: ['<i class="fa fa-check"></i> 确定', '<i class="fa fa-eraser"></i> 清除','<i class="fa fa-close"></i> 关闭'],
 	    yes:function(index,j){
