--- a/src/main/webapp/mportals/adminext/user/edit.html
+++ b/src/main/webapp/mportals/adminext/user/edit.html
@@ -49,7 +49,8 @@
 								所属部门：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-10">
 								<div class="input-group">
-									<input id="parent" name="dept.oid" type="text" value="2" class="form-control ">
+									<input id="parent_oid" name="dept.oid" type="hidden" value="" class="form-control ">
+									<input id="parent_rname" name="dept.deptname" type="text" value="" class="form-control ">
 									<span class="input-group-btn"><a id="parentButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
 								</div>
 
@@ -176,7 +177,7 @@ $(function(){
 	}, "json");
 	//选择上级资源
 	$("#parentButton").on("click",function(){
-		showlayer('上级资源','http://layer.layui.com/test/welcome.html');
+		showlayer('所属部门','/Quark/dept/ext/treeselect?url=xxxx&checkbox=true');
 	});
 	//选择图标
 	$("#menuIconButton").on("click",function(){
@@ -189,14 +190,37 @@ function showlayer(_title,_url){
 	    type: 2,
 	    title: _title,
 	    maxmin: true,
-	    area: ['800px', '500px'],
+	    area: ['300px', '400px'],
 	    content: _url,
 	    end: function(){
 	      //layer.tips('Hi', '#about', {tips: 1})
+	    },
+	    btn: ['<i class="fa fa-check"></i> 确定', '<i class="fa fa-eraser"></i> 清除','<i class="fa fa-close"></i> 关闭'],
+	    yes:function(index,j){
+	    	console.log("yes111:"+index+",222:",j[0]);
+	    	var a = $(j[0]).find("iframe")[0].contentWindow;
+	    	//console.log("a:",a);
+	    	var tree = a.getTreeObj();
+	    	//console.log("tree:",tree);
+	    	var nodes = tree.getSelectedNodes();
+	    	console.log("sssss",nodes);
+	    	if(nodes.length != 0){
+	    		var node = nodes[0];
+	    		$("#parent_oid").val(node.id);
+	    		$("#parent_rname").val(node.name);
+	    	}
+	    	
+            layer.close(index);
+	    },
+	    btn2:function(i,j){
+	    	$("#parent_oid").val("");
+    		$("#parent_rname").val("");
+	    },
+	    btn3:function(i,j){
+	    	//console.log("btn111:"+i+",222:",j);
 	    }
 	  });
-}
-$("#inputForm").validate({
+}$("#inputForm").validate({
 	submitHandler: function(form){
 		js.ajaxSubmitForm($(form), function(data){
 			js.showMessage(data.message);
