用户列表优化

--- a/src/main/webapp/mportals/adminext/roleinfo/list.html
+++ b/src/main/webapp/mportals/adminext/roleinfo/list.html
@@ -37,7 +37,7 @@
 			<div class="box-tools pull-right">
 				<a href="list.html" class="btn btn-default" id="btnRefreshTree" title="刷新"><i class="fa fa-refresh"></i> 刷新</a>
 				<a href="#" class="btn btn-default" id="btnSearch" title="查询"><i class="fa fa-filter"></i> 查询</a>
-				<a href="#" data-href="../mportals/adminext/roleinfo/edit.html" class="btn btn-default add" title="新增资源"><i class="fa fa-plus"></i> 新增</a>
+				<a href="#" data-href="../mportals/adminext/roleinfo/edit.html" class="btn btn-default add" title="新增角色"><i class="fa fa-plus"></i> 新增</a>
 			</div>
 		</div>
 		<div class="box-body">
@@ -151,8 +151,11 @@ var _dataGrid = $('#dataGrid').dataGrid({
 		
 		 {header:'操作', name:'actions', width:120, sortable:false, title:false, formatter: function(val, obj, row, act){
 			var actions = [];
-				 actions.push('<a href="#" data-href="../mportals/adminext/roleinfo/edit.html?id='+row.oid+'" class="btnEdit"  title="编辑资源"><i class="fa fa-pencil"></i></a>&nbsp;');
-				 actions.push('<a href="#" data-href="/Quark/role/ext/deleteit?id='+row.oid+'" class="btnDel"  title="删除资源" data-confirm="确认要删除该资源吗？"><i class="fa fa-trash-o"></i></a>&nbsp;');
+				 actions.push('<a href="#" data-href="../mportals/adminext/roleinfo/edit.html?id='+row.oid+'" class="btnEdit"  title="编辑角色"><i class="fa fa-pencil"></i></a>&nbsp;');
+				 /* actions.push('<a href=/Quark/dataTree/treeselectRole?id='+row.oid+'" class="btnEdit"  title="功能菜单">功能菜单</a>&nbsp;'); */
+				 /* actions.push('<a href="javascript:void(0);" onclick="showlayer(\'功能菜单\',\'/Quark/dataTree/treeselectRole\')"  title="功能菜单">功能菜单</a>&nbsp;'); */
+				 actions.push('<a href="#" data-href="../mportals/adminext/roleinfo/roleTree.html?roleid='+row.oid+'"   class="btnEdit" title="功能菜单">功能菜单</a>&nbsp;'); 
+				 actions.push('<a href="#" data-href="/Quark/role/ext/deleteit?id='+row.oid+'" class="btnDel"  title="删除角色" data-confirm="确认要删除该角色吗？"><i class="fa fa-trash-o"></i></a>&nbsp;');
 			return actions.join('');
 		}}
 	],
@@ -162,7 +165,42 @@ var _dataGrid = $('#dataGrid').dataGrid({
 	}
 });
 
-
+function showlayer(_title,_url){
+	layer.open({
+	    type: 2,
+	    title: _title,
+	    maxmin: true,
+	    area: ['300px', '400px'],
+	    content: _url,
+	    end: function(){
+	      //layer.tips('Hi', '#about', {tips: 1})
+	    },
+	    btn: ['<i class="fa fa-check"></i> 确定', '<i class="fa fa-eraser"></i> 清除','<i class="fa fa-close"></i> 关闭'],
+	    yes:function(index,j){
+	    	console.log("yes111:"+index+",222:",j[0]);
+	    	var a = $(j[0]).find("iframe")[0].contentWindow;
+	    	//console.log("a:",a);
+	    	var tree = a.getTreeObj();
+	    	//console.log("tree:",tree);
+	    	var nodes = tree.getSelectedNodes();
+	    	console.log("sssss",nodes);
+	    	if(nodes.length != 0){
+	    		var node = nodes[0];
+	    		$("#parent_oid").val(node.id);
+	    		$("#parent_rname").val(node.name);
+	    	}
+	    	
+            layer.close(index);
+	    },
+	    btn2:function(i,j){
+	    	$("#parent_oid").val("");
+    		$("#parent_rname").val("");
+	    },
+	    btn3:function(i,j){
+	    	//console.log("btn111:"+i+",222:",j);
+	    }
+	  });
+}
 </script>
   </body>
 </html>
