--- a/src/main/webapp/mportals/adminext/user/edit.html
+++ b/src/main/webapp/mportals/adminext/user/edit.html
@@ -49,8 +49,8 @@
 								所属部门：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-10">
 								<div class="input-group">
-									<input id="parent_oid" name="dept.oid" type="hidden" value="" class="form-control ">
-									<input id="parent_rname" name="dept.deptname" type="text" value="" class="form-control ">
+									<input id="deptOid" name="dept.oid" type="hidden" value="" class="form-control ">
+									<input id="deptName" name="dept.deptname" type="text" value="" class="form-control ">
 									<span class="input-group-btn"><a id="parentButton" href="javascript:" class="btn btn-default"><i class="fa fa-search"></i></a></span>
 								</div>
 
@@ -66,7 +66,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required">*</span> 登录账号：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="logid" name="logid" value="" maxlength="200" class="form-control required" required/>
+<input type="text" id="logid" name="logid" value="" maxlength="50" class="form-control required" required/>
 							</div>
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required">*</span> 用户昵称：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="cname" name="cname" value="" maxlength="200" class="form-control required" required/>
+<input type="text" id="cname" name="cname" value="" maxlength="50" class="form-control required" required/>
 							</div>
 						</div>
 					</div>
@@ -86,7 +86,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required">*</span> 手机号码：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="mobile" name="mobile" value="" maxlength="200" class="form-control required" required/>
+<input type="text" id="mobile" name="mobile" value="" maxlength="20" class="form-control required" required/>
 							</div>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 							<label class="control-label col-sm-4" title="">
 								<span class="required">*</span> 邮箱：<i class="fa icon-question hide"></i></label>
 							<div class="col-sm-8">
-<input type="text" id="email" name="email" value="" maxlength="200" class="form-control required" required/>
+<input type="text" id="email" name="email" value="" maxlength="50" class="form-control required" required/>
 							</div>
 						</div>
 					</div>
@@ -206,15 +206,15 @@ function showlayer(_title,_url){
 	    	console.log("sssss",nodes);
 	    	if(nodes.length != 0){
 	    		var node = nodes[0];
-	    		$("#parent_oid").val(node.id);
-	    		$("#parent_rname").val(node.name);
+	    		$("#deptOid").val(node.id);
+	    		$("#deptName").val(node.name);
 	    	}
 	    	
             layer.close(index);
 	    },
 	    btn2:function(i,j){
-	    	$("#parent_oid").val("");
-    		$("#parent_rname").val("");
+	    	$("#deptOid").val("");
+    		$("#deptName").val("");
 	    },
 	    btn3:function(i,j){
 	    	//console.log("btn111:"+i+",222:",j);
@@ -222,6 +222,18 @@ function showlayer(_title,_url){
 	  });
 }$("#inputForm").validate({
 	submitHandler: function(form){
+		var mobile =  $("#mobile").val();
+		if(!(/^1[345789]\d{9}$/.test(mobile))){
+			js.showMessage("手机号有误，请重新填写");
+	        return false;
+	    }
+		
+		var myReg=/^[a-zA-Z0-9_-]+@([a-zA-Z0-9]+\.)+(com|cn|net|org)$/;
+		var email = $("#email").val();
+		if(email!=""&&!myReg.test(email)){
+			js.showMessage("邮箱格式不正确！");
+			return false;
+		}
 		js.ajaxSubmitForm($(form), function(data){
 			js.showMessage(data.message);
 			if(data.result == "true"){
