--- a/src/main/webapp/mportals/adminext/roleinfo/roleTree.html
+++ b/src/main/webapp/mportals/adminext/roleinfo/roleTree.html
@@ -7,7 +7,7 @@
 <meta content="width=device-width, initial-scale=1, user-scalable=1" name="viewport">
 <meta content="e-Hualu 易华录  - Powered By JeeSite" name="description">
 <meta content="ThinkGem, http://jeesite.com" name="author">
-<title>角色管理 </title>
+<title>分配菜单 </title>
 <!-- <script src="/itsm/global.min.js?ctx=/itsm/a"></script> -->
 <script type="text/javascript" src="/Quark/statics/jQuery/jquery-1.12.4.min.js"></script>
 <script type="text/javascript" src="/Quark/statics/jQuery/jquery-migrate-1.4.1.min.js"></script>
@@ -32,7 +32,7 @@
 		<div class="box box-main" >
 			<div class="box-header" >
 				<div class="box-title">
-					<i class="fa icon-grid"></i> 功能菜单
+					<i class="fa icon-grid"></i> 分配菜单
 				</div>
 				<!-- <div class="box-tools pull-right">
 				
