--- a/src/main/webapp/mportals/adminext/user/list.html
+++ b/src/main/webapp/mportals/adminext/user/list.html
@@ -167,6 +167,7 @@ $('#dataGrid').dataGrid({
  */		{header:'操作', name:'actions', width:260, sortable:false, title:false, formatter: function(val, obj, row, act){
 			var actions = [];
 			actions.push('<a href="#" data-href="../mportals/adminext/user/edit.html?id='+row.oid+'" class="btnEdit"  title="编辑用户"><i class="fa fa-pencil"></i></a>&nbsp;');
+			 actions.push('<a href="#" data-href="../mportals/adminext/user/grantUser.html?userid='+row.oid+'"   class="btnEdit" title="分配角色">分配角色</a>&nbsp;'); 
 			actions.push('<a href="#" data-href="/Quark/user/ext/deleteit?id='+row.oid+'" class="btnDel"  title="删除用户" data-confirm="确认要删除该用户吗？"><i class="fa fa-trash-o"></i></a>&nbsp;');
 				
 			actions.push('</div>');
