--- a/src/main/webapp/mportals/adminext/roleinfo/roleTree.html
+++ b/src/main/webapp/mportals/adminext/roleinfo/roleTree.html
@@ -145,7 +145,7 @@ data: {
             	tree.updateNode(nodes[i]);
             }
         }
-	}, null, null, js.text('loading.message'));
+	}, null, null, js.text('加载中...'));
 };
 
 $(function (){
