--- a/src/main/webapp/mportals/adminext/user/index.html
+++ b/src/main/webapp/mportals/adminext/user/index.html
@@ -136,7 +136,7 @@ var setting = {view:{selectedMulti:false,showLine: true},data:{simpleData:{enabl
 // 		for(var i=0; i<nodes.length; i++) {
 // 			tree.expandNode(nodes[i], true, false, false);
 // 		}
-	}, null, null, js.text('loading.message'));
+	}, null, null, js.text('加载中...'));
 };
 loadTree();
 // 工具栏按钮绑定
