--- a/src/main/webapp/mportals/adminext/user/list.html
+++ b/src/main/webapp/mportals/adminext/user/list.html
@@ -136,13 +136,14 @@ $(function(){
 		if(confirm!=undefined){
 			js.confirm(confirm,url,function(data){
 				if(data.result=="true"){
-					js.showMessage("删除成功");
+					js.showMessage("操作成功");
 					$("#dataGrid").dataGrid("refresh");
 				}
 				},"json")
 			}
 		return false
 	});
+	
 })
 // 初始化DataGrid对象
 $('#dataGrid').dataGrid({
@@ -151,6 +152,7 @@ $('#dataGrid').dataGrid({
 		/* {header:'登录账号', name:'loginCode', index:'a.login_code', width:200, align:"center", frozen:true, formatter: function(val, obj, row, act){
 			return '<a href="${ctx}/sys/empUser/form?userCode='+row.userCode+'&op=edit" class="btnList" data-title="${text('编辑用户')}">'+(val||row.id)+'</a>';
 		}}, */
+		{header:'账号', name:'oid', index:'oid', width:200, align:"center",hidden:true},
 		{header:'账号', name:'logid', index:'logid', width:200, align:"center"},
 		{header:'用户昵称', name:'cname', index:'cname', width:200, align:"center"},
 		/* {header:'员工姓名', name:'refName', index:'a.ref_name', width:200, align:"center"},
@@ -159,6 +161,7 @@ $('#dataGrid').dataGrid({
 		
 		{header:'手机号码', name:'mobile', index:'mobile', width:200, align:"center"},
 		{header:'电子邮箱', name:'email', index:'email', width:200, align:"center"},
+		{header:'状态', name:'status', index:'status', width:200, align:"center",hidden:false},
 		/* {header:'办公电话', name:'phone', index:'a.phone', width:200, align:"center"},
 		{header:'更新时间', name:'updateDate', index:'a.update_date', width:200, align:"center"}, */
 	/* 	{header:'状态', name:'status', index:'a.status', width:140, align:"center", formatter: function(val, obj, row, act){
@@ -168,6 +171,12 @@ $('#dataGrid').dataGrid({
 			var actions = [];
 			actions.push('<a href="#" data-href="../mportals/adminext/user/edit.html?id='+row.oid+'" class="btnEdit"  title="编辑用户"><i class="fa fa-pencil"></i></a>&nbsp;');
 			 actions.push('<a href="#" data-href="../mportals/adminext/user/grantUser.html?userid='+row.oid+'"   class="btnEdit" title="分配角色">分配角色</a>&nbsp;'); 
+			 if (row.status ==1){
+					actions.push('<a href="#" data-href="/Quark/user/ext/modifystatus?oid='+row.oid+'&status=0" class="btnDel" title="停用用户" data-confirm="确认要停用该用户吗？"><i class="glyphicon glyphicon-ban-circle"></i></a>&nbsp;');
+				}
+			if (row.status == 0){
+				actions.push('<a href="#" data-href="/Quark/user/ext/enable?oid='+row.oid+'" class="btnDel" title="启用用户" data-confirm="确认要启用该用户吗？"><i class="glyphicon glyphicon-ok-circle"></i></a>&nbsp;');
+			}
 			actions.push('<a href="#" data-href="/Quark/user/ext/deleteit?id='+row.oid+'" class="btnDel"  title="删除用户" data-confirm="确认要删除该用户吗？"><i class="fa fa-trash-o"></i></a>&nbsp;');
 				
 			actions.push('</div>');
